--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -12,6 +12,12 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="http://wwcdn.weixin.qq.com/node/wework/wwopen/js/wwLogin-1.2.4.js"></script>
+    <script>
+      window.getQRCode = function(config){
+            new WwLogin(config);
+      };
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
