--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -14,6 +14,12 @@
     <div id="app"></div>
     <script src="http://wwcdn.weixin.qq.com/node/wework/wwopen/js/wwLogin-1.2.4.js"></script>
     <script>
+
+      try {
+          window.globalData = JSON.parse('<?- global_data_string ?>');
+      } catch (error) {
+        
+      }
       window.getQRCode = function(config){
             new WwLogin(config);
       };
